--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
@@ -10,7 +10,7 @@
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     d:DataContext="{d:DesignInstance Type=drawers:HomeDrawerViewModel,
                                      IsDesignTimeCreatable=True}"
-    d:DesignWidth="850"
+    d:DesignWidth="1000"
     mc:Ignorable="d">
 
     <UserControl.Resources />
@@ -201,14 +201,17 @@
                 <Label
                     Grid.Row="6"
                     HorizontalAlignment="Center"
+                    Margin="0,10,0,0"
+                    d:Visibility="Visible"
                     Visibility="{Binding ShellViewModel.LauncherHasUpdate, Converter={StaticResource BooleanToVisibilityConverter}}"
                     >
                     <TextBlock
                         cm:Message.Attach="[Event MouseLeftButtonDown] = [Action OnUpdateLauncher];"
                         Cursor="Hand"
                         Style="{StaticResource RedTextBlockStyle}"
-                        Text="Launcher Update Available!"
-                        TextDecorations="Underline" Margin="0,10,0,0">
+                        d:Text="Launcher Update Available! (2.2.2)"
+                        Text="{Binding ShellViewModel.LauncherUpdateString}"
+                        TextDecorations="Underline">
                         <TextBlock.Triggers>
                             <EventTrigger RoutedEvent="Loaded">
                                 <BeginStoryboard Storyboard="{StaticResource FlashAnimation}" />
