--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
@@ -398,7 +398,7 @@
                                 FontWeight="Bold"
                                 Foreground="Goldenrod"
                                 Style="{StaticResource LabelHeaderStyle}" />
-                            <ComboBox
+                            <ComboBox IsEnabled="{Binding ShellViewModel.ModInfo.RunewordSorting}"
                                 Width="125"
                                 Height="40"
                                 DisplayMemberPath="Key"
@@ -424,7 +424,7 @@
                                     IconTemplate="{StaticResource PreviewIconTemplate}"
                                     Style="{StaticResource SfButtonAdvSmallStyle}" />
                             </StackPanel>
-                            <ComboBox
+                            <ComboBox IsEnabled="{Binding ShellViewModel.ModInfo.HudDisplay}"
                                 Width="125"
                                 Height="40"
                                 DisplayMemberPath="Key"
