--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
@@ -54,7 +54,8 @@
                         HorizontalAlignment="Center"
                         Columns="3">
                         <ComboBox
-                            Width="125"
+                            Width="150
+                            "
                             Height="40"
                             cm:Message.Attach="[Event SelectionChanged] = [Action OnUsePreview];"
                             DisplayMemberPath="Key"
@@ -109,7 +110,8 @@
                         HorizontalAlignment="Center"
                         Columns="3">
                         <ComboBox
-                            Width="125"
+                            Width="150
+                            "
                             Height="40"
                             DisplayMemberPath="Key"
                             ItemsSource="{Binding BackupsSettings}"
