--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/StashTabSettingsView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/StashTabSettingsView.xaml
@@ -1,85 +1,136 @@
-﻿<UserControl x:Class="D2RLaunch.Views.Dialogs.StashTabSettingsView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:D2RLaunch.Views.Dialogs"
-             xmlns:dialogs="clr-namespace:D2RLaunch.ViewModels.Dialogs"
-             xmlns:cm="http://caliburnmicro.com"
-             Width="884"
-             Height="320"
-             d:DataContext="{d:DesignInstance Type=dialogs:StashTabSettingsViewModel,
-                                 IsDesignTimeCreatable=True}"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="D2RLaunch.Views.Dialogs.StashTabSettingsView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cm="http://caliburnmicro.com"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialogs="clr-namespace:D2RLaunch.ViewModels.Dialogs"
+    xmlns:local="clr-namespace:D2RLaunch.Views.Dialogs"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="884"
+    Height="320"
+    d:DataContext="{d:DesignInstance Type=dialogs:StashTabSettingsViewModel,
+                                     IsDesignTimeCreatable=True}"
+    mc:Ignorable="d">
     <Grid>
-        <Image Source="pack://application:,,,/Resources/Images/StashSettingsBackground.png"></Image>
+        <Image Source="pack://application:,,,/Resources/Images/StashSettingsBackground.png" />
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Border Grid.Row="0" BorderThickness="4,4,4,2" Margin="10,20,10,10" Width="813" Height="124" CornerRadius="1,1,1,1">
+            <Border
+                Grid.Row="0"
+                Width="813"
+                Height="124"
+                Margin="10,20,10,10"
+                BorderThickness="4,4,4,2"
+                CornerRadius="1,1,1,1">
                 <Border.BorderBrush>
                     <SolidColorBrush Opacity="0.5" Color="DarkRed" />
                 </Border.BorderBrush>
 
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <Border Grid.Row="0" BorderThickness="0,0,0,2" Width="813" Height="62">
+                    <Border
+                        Grid.Row="0"
+                        Width="813"
+                        Height="62"
+                        BorderThickness="0,0,0,2">
                         <Border.BorderBrush>
                             <SolidColorBrush Opacity="0.5" Color="DarkRed" />
                         </Border.BorderBrush>
-                        <Label Content="Stash" Style="{StaticResource LabelNormalGoldStyle}"></Label>
+                        <Label Content="Stash" Style="{StaticResource LabelHeaderStyle}" />
                     </Border>
 
-                    <UniformGrid Grid.Row="1" Columns="8" VerticalAlignment="Center" Margin="10">
-                        <Label Content="{Binding StashTabNames[0]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[1]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[2]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[3]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[4]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[5]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[6]}" HorizontalAlignment="Center"></Label>
-                        <Label Content="{Binding StashTabNames[7]}" HorizontalAlignment="Center"></Label>
+                    <UniformGrid
+                        Grid.Row="1"
+                        Margin="10"
+                        VerticalAlignment="Center"
+                        Columns="8">
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[0]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[1]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[2]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[3]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[4]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[5]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[6]}" />
+                        <Label HorizontalAlignment="Center" Content="{Binding StashTabNames[7]}" />
                     </UniformGrid>
 
                 </Grid>
             </Border>
 
-            <Label Grid.Row="1" Content="{Binding Path=StashLabel, Source={StaticResource Resources}}" Style="{StaticResource LabelNormalStyle}" Foreground="Goldenrod"></Label>
+            <Label
+                Grid.Row="1"
+                Content="{Binding Path=StashLabel, Source={StaticResource Resources}}"
+                Foreground="Goldenrod"
+                Style="{StaticResource LabelNormalStyle}" />
 
-            <UniformGrid Grid.Row="2" Columns="8" VerticalAlignment="Center" Margin="10">
-                <TextBox Text="{Binding StashTabNames[0]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[1]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[2]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[3]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[4]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[5]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[6]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
-                <TextBox Text="{Binding StashTabNames[7]}" HorizontalContentAlignment="Center" Margin="5"></TextBox>
+            <UniformGrid
+                Grid.Row="2"
+                Margin="10"
+                VerticalAlignment="Center"
+                Columns="8">
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[0]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[1]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[2]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[3]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[4]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[5]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[6]}" />
+                <TextBox
+                    Margin="5"
+                    HorizontalContentAlignment="Center"
+                    Text="{Binding StashTabNames[7]}" />
             </UniformGrid>
 
-            <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="5" HorizontalAlignment="Center">
+            <StackPanel
+                Grid.Row="3"
+                Margin="5"
+                HorizontalAlignment="Center"
+                Orientation="Horizontal">
                 <Button
+                    Width="75"
+                    VerticalAlignment="Top"
                     cm:Message.Attach="TryCloseAsync(false);"
                     Background="#200708"
-                    VerticalAlignment="Top"
-                    Width="75"
                     Content="{Binding Path=StashCancel, Source={StaticResource Resources}}"
                     Style="{StaticResource ButtonStyle}" />
                 <Button
+                    Width="75"
+                    VerticalAlignment="Top"
                     cm:Message.Attach="[Event Click] = [Action OnApply];"
                     Background="#0d2905"
-                    VerticalAlignment="Top"
-                    Width="75"
                     Content="{Binding Path=StashApply, Source={StaticResource Resources}}"
                     Style="{StaticResource ButtonStyle}" />
             </StackPanel>
