--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/CustomizationsDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/CustomizationsDrawerView.xaml
@@ -133,7 +133,7 @@
                             Background="#FF313030"
                             DisplayMemberPath="Key"
                             ItemsSource="{Binding GroupSizes}"
-                            SelectedIndex="{Binding SelectedDifficulty.SelectedGroupSize}"
+                            SelectedIndex="{Binding ShellViewModel.UserSettings.SelectedGroupSize}"
                             SelectedValuePath="Value"
                             Style="{StaticResource ComboBoxStyle}" />
                     </StackPanel>
