Restore Character Improvement
- User will be directed to selected character's backup folder upon selection to select the timestamped file to restore
- OnRestoreBackupSelection() created and OnRestoreBackup() modified

--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/RestoreBackupView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/RestoreBackupView.xaml
@@ -23,6 +23,7 @@
             <ComboBox
                 ItemsSource="{Binding Characters}"
                 SelectedValue="{Binding SelectedCharacter}"
+                cm:Message.Attach="[Event SelectionChanged] = [Action OnRestoreBackupSelection];"
                 Style="{StaticResource ComboBoxStyle}" />
         </StackPanel>
 
