Dialog Type Fixes
- Changed all Dialogs to Window type in order to correctly pass them the CenterScreen/CenterOwner arguments.  (3rd parameter, "options" of the ShowDialogAsync function)
- Adjusted Stash Tab View BG Image to Fill instead of Uniform
- Added Window Type controls to DownloadNewMod View as well as adjusted form resizing from Manual to Height Only

--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/BuffIconSettingsView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/BuffIconSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Window
     x:Class="D2RLaunch.Views.Dialogs.BuffIconSettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -516,4 +516,4 @@
         </UniformGrid>
 
     </Grid>
-</UserControl>
+</Window>
