--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/CASCExtractor.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/CASCExtractor.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Window
     x:Class="D2RLaunch.Views.Dialogs.CASCExtractorView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:cm="http://caliburnmicro.com"
@@ -194,4 +194,4 @@
             Style="{StaticResource SfButtonAdvSmallStyle}" Margin="10,145,0,0" Grid.Column="2" Grid.RowSpan="2" />
 
     </Grid>
-</UserControl>
+</Window>
