--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/DownloadNewModView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/DownloadNewModView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Window
     x:Class="D2RLaunch.Views.Dialogs.DownloadNewModView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,7 +12,7 @@
     Height="275"
     d:DataContext="{d:DesignInstance Type=dialogs:DownloadNewModViewModel,
                                      IsDesignTimeCreatable=True}"
-    mc:Ignorable="d">
+    mc:Ignorable="d" SizeToContent="Height">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -139,4 +139,4 @@
             Foreground="DodgerBlue" />
 
     </Grid>
-</UserControl>
+</Window>
