--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/ImagePreviewerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/ImagePreviewerView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Window
     x:Class="D2RLaunch.Views.Dialogs.ImagePreviewerView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -19,4 +19,4 @@
             DataContext="{Binding RelativeSource={RelativeSource AncestorType=Grid}, Path=DataContext}"
             gif:ImageBehavior.AnimatedSource="{Binding ImagePath}" />
     </Grid>
-</UserControl>
+</Window>
