--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/RestoreBackupView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/RestoreBackupView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Window
     x:Class="D2RLaunch.Views.Dialogs.RestoreBackupView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -34,4 +34,4 @@
             Content="{Binding Path=AutoBackupBtn2, Source={StaticResource Resources}}"
             Style="{StaticResource ButtonStyle}" />
     </Grid>
-</UserControl>
+</Window>
