--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/StashTabSettingsView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/StashTabSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Window
     x:Class="D2RLaunch.Views.Dialogs.StashTabSettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -13,7 +13,7 @@
                                      IsDesignTimeCreatable=True}"
     mc:Ignorable="d">
     <Grid>
-        <Image Source="pack://application:,,,/Resources/Images/StashSettingsBackground.png" />
+        <Image Source="pack://application:,,,/Resources/Images/StashSettingsBackground.png" Stretch="Fill" />
 
         <Grid>
             <Grid.RowDefinitions>
@@ -137,4 +137,4 @@
 
         </Grid>
     </Grid>
-</UserControl>
+</Window>
