Form Owner Centering + Image Preview Improvements
- Added Event handler code to adjust and center popup windows on main form
- Added Fill Property to Image used in Image Previews
- Added handler code to Image Previews Model to crop form size to match base image size

--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/ImagePreviewerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/ImagePreviewerView.xaml
@@ -17,6 +17,6 @@
             Margin="5"
             d:Source="pack://application:,,,/Resources/Preview/Preview_HUD.png"
             DataContext="{Binding RelativeSource={RelativeSource AncestorType=Grid}, Path=DataContext}"
-            gif:ImageBehavior.AnimatedSource="{Binding ImagePath}" />
+            gif:ImageBehavior.AnimatedSource="{Binding ImagePath}" Stretch="Fill" />
     </Grid>
 </Window>
