Color Dye QoL Options + Begin Dynamic HP Bar
- Color Dye System added under QoL Options; still needs preview, culture strings and remodded disable
- Dynamic Monster HP structure laid out; still missing UI edit and code execution. Currently hidden due to UI issue.

--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
@@ -315,6 +315,12 @@
                             IsChecked="{Binding ShellViewModel.UserSettings.HdrFix}"
                             Style="{StaticResource CheckBoxStyle}" />
                         <CheckBox
+                            Grid.Row="4"
+                            HorizontalAlignment="Right"
+                            Content="Dynamic HP Bar"
+                            IsChecked="{Binding ShellViewModel.UserSettings.MonHPBar}"
+                            Style="{StaticResource CheckBoxStyle}" Visibility="Hidden" />
+                        <CheckBox
                             Grid.Row="5"
                             HorizontalAlignment="Left"
                             Content="{Binding Path=Regen, Source={StaticResource Resources}}"
