--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
@@ -169,24 +169,28 @@
                             Background="#0d2905"
                             Content="Inventory"
                             IsChecked="{Binding ShellViewModel.UserSettings.ExpandedInventory}"
+                            IsEnabled="{Binding ShellViewModel.ExpandedStashEnabled}"
                             Style="{StaticResource ToggleButtonStyle}" />
                         <ToggleButton
                             cm:Message.Attach="[Event Click] = [Action OnExpanded_Stash];"
                             Background="#0d2905"
                             Content="Stash"
                             IsChecked="{Binding ShellViewModel.UserSettings.ExpandedStash}"
+                            IsEnabled="{Binding ShellViewModel.ExpandedInventoryEnabled}"
                             Style="{StaticResource ToggleButtonStyle}" />
                         <ToggleButton
                             cm:Message.Attach="[Event Click] = [Action OnExpanded_Cube];"
                             Background="#0d2905"
                             Content="Cube"
                             IsChecked="{Binding ShellViewModel.UserSettings.ExpandedCube}"
+                            IsEnabled="{Binding ShellViewModel.ExpandedCubeEnabled}"
                             Style="{StaticResource ToggleButtonStyle}" />
                         <ToggleButton
                             cm:Message.Attach="[Event Click] = [Action OnExpanded_Merc];"
                             Background="#0d2905"
                             Content="Merc"
                             IsChecked="{Binding ShellViewModel.UserSettings.ExpandedMerc}"
+                            IsEnabled="{Binding ShellViewModel.ExpandedMercEnabled}"
                             Style="{StaticResource ToggleButtonStyle}" />
                     </UniformGrid>
                     <Label
@@ -434,7 +438,7 @@
                         Width="125"
                         Height="40"
                         DisplayMemberPath="Key"
-                        IsEnabled="{Binding ShellViewModel.ColorDyeEnabled}"
+                        IsEnabled="{Binding ShellViewModel.ColorDyesEnabled}"
                         ItemsSource="{Binding EnabledDisabledOptions}"
                         SelectedIndex="{Binding ShellViewModel.UserSettings.ColorDye}"
                         SelectedValuePath="Value"
